syntax = "proto3";
package api.v1;
option go_package=".;api";

service UserService{
    rpc Register(RegisterRequest)returns(RegisterResponse);//注册
    rpc LoginCheckByEmail(LoginCheckByEmailRequest)returns(LoginCheckByEmailResponse);
    rpc GetUserByPhone(GetUserByPhoneRequest)returns(GetUserByPhoneResponse);
    rpc GetUserById(GetUserByIdRequest)returns(GetUserByIdResponse);
}

message User{
    int64 id = 1;
    string name = 2;
    string password = 3;
    string email = 4;
    string phone = 5;
}

message RegisterRequest{
    User user=1;
}

message RegisterResponse{
    int64 id=1;
}

message LoginCheckByEmailRequest{
    string email=1;
    string password=2;
}

message LoginCheckByEmailResponse{
    User user=1;
}

message GetUserByPhoneRequest{
    string phone=1;
}

message GetUserByPhoneResponse{
    User user=1;
}

message GetUserByIdRequest{
    int64 id=1;
}

message GetUserByIdResponse{
    User user=1;
}
