syntax = "proto3";
package api;
option go_package=".;api";

service user{
    rpc Register(User)returns(RegisterRep);//注册
    rpc CheckIdentityByEmail(CheckIdentityByEmailReq)returns(User);
    rpc GetUserByPhone(GetUserByPhoneReq)returns(User);
}

message User{
    int64 id = 1;
    string name = 2;
    string password = 3;
    string email = 4;
    string phone = 5;
}

message RegisterRep{
    int64 id=1;
}

message CheckIdentityByEmailReq{
    string email=1;
    string password=2;
}

message GetUserByPhoneReq{
    string phone=1;
}
